--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ p {
   line-height: 1.2;
 }
 
-/*?-----------> Lenis CSS Settins */
+/*?-----------> Lenis CSS Settings */
 html.lenis {
   height: auto;
 }
@@ -65,4 +65,34 @@ html.lenis {
 
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
+}
+
+/*?-----------> Section */
+.section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 6.4rem;
+}
+
+.section_wrapper {
+  position: relative;
+  width: max-content;
+}
+
+/* background */
+.section_bg {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.section_bg_video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(0.5);
 }
